# MLOps-AWS

./: .gitignore  README.md  pyproject.toml
Custom_Models/custom_with_tensor_flow/: mnist-tf2.py
Custom_Models/scikit-byoc/container/: ReadMe.md
Dockers/: README.md
Dockers/flask-app/: app.py
Feature_Engineering/: tarea_2.py  tarea_21.py
SageMaker/: README.md  sagemaker-feature-model-building.ipynb
mlflow-pipelines/: MLproject  main.py  metrics.txt  new_predictions.ipynb  preprocess.py  train.py
mlflow-pipelines/data/: README.md
mlflow-pipelines/data/processed/: x_test.csv  y_test.csv
